1999-10-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed problems with OID DEFVALS in SMIv1
	modules. now {0 0} works.

	* lib/smi.c (smiGetParentNode): fixed a bug where the wrong
	node has been returned for implicitly defined nodes as used
	in notification types.

	* lib/smi.c (smiGetNextNode): fixed a similar bug here that
	caused loops.

	* lib/parser-smi.y: added check for multiple groups or
	object refinements for the same object in a single
	compliance statement. this caused loops before.

	* tools/smidump.c: applied another patch by Juergen Schoenwaelder
	that beautifies various dump formats and introduces a regression
	test system.
	
1999-10-01  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed range of Counter64.

	* tools/dump-types.c: applied a patch by Juergen Schoenwaelder
	that beautifies the dump formats for imports and types.

1999-09-30  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed some more decl settings.

	* tools/smidump.c: applied a huge patch by Juergen Schoenwaelder
	that reorganizes the smidump format modules and adds a (not
	yet compiled) new format for xfig figures.

1999-09-29  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/data.h: new struct Value. Now all smi.h structs are
	separated from the data.h structs. This was needed to handle
	OID DEFVALs correctly.
	
	* tools/smiquery.c (main): added default values und beatified
	some other output.

	* lib/smi.h: SMI_DECL_IMPLICIT_TYPE denotes implicitly defined
	types. Fixed some other decl settings for types in the SMIv1/v2
	parser.

	* tools/dump-data.c: Applied a patch from Juergen Schoenwaelder
	that fixes some types for the tree dump format.
	
1999-09-27  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* configure.in: added checks for 64bit strtoX() functions to
	work on FreeBSD systems.

1999-09-24  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* tools/dump-smi.c: fixed some generated import for SMIv1