@@ -1,17 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-1.out
-mkdir smidump-1.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: dumping SMIv2 module in SMIng format."
-    ../tools/smidump -l0 -fsming $mib > smidump-1.out/$mib.sming
-    if [ $? -ne 0 ] ; then
-	echo "see directory smidump-1.out for results on $mib."
-        RC=1
-    fi
-done
-
-exit ${RC}
