@@ -1,21 +1,0 @@
-#!/bin/sh
-
-rm -rf smidump-8.out
-mkdir smidump-8.out
-
-RC=0
-
-for mib in ${TESTMIBS} ; do
-    echo "$mib: comparing \`smidump -f corba-oid' output with dumps/$mib.corba-oid."
-    for d in `echo ${SMIPATH} | tr ':' ' '` ; do
-	if [ -f $d/$mib ] ; then break ; fi
-    done 
-    ../tools/smidump -f corba-oid $mib > smidump-8.out/$mib.corba-oid
-    WC=`diff -I smidump --ignore-blank-lines smidump-8.out/$mib.corba-oid dumps/$mib.corba-oid | wc -l`
-    if [ $WC -ne 0 ] ; then
-	echo "smidump -f corba-oid output for $mib differs from dump/$mib.corba-oid."
-	RC=1
-    fi
-done
-
-exit ${RC}
